--- a/css/style.css
+++ b/css/style.css
@@ -2858,6 +2858,15 @@ html .ui-button.ui-state-disabled:active {
     -webkit-line-clamp: 4;
 }
 
+.text-split-5 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+}
+
 /* Sản phẩm */
 
 .bg-hover {
@@ -2884,6 +2893,10 @@ html .ui-button.ui-state-disabled:active {
     opacity: 0.5;
 }
 
+.product-item:hover p {
+    color: #fff;
+}
+
 .dichvu-title h1 {
     text-align: center;
     font-size: 32px;
@@ -2903,4 +2916,8 @@ html .ui-button.ui-state-disabled:active {
 .zoom-image:hover img {
     transform: scale(1.1);
     transition: transform 0.3s ease-in-out;
+}
+
+.box-info-product:hover button {
+    display: none;
 }
